explorercat/src/net/explorercat/compactcat/parser/antlr/CompactCatDictionaryParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g 2011-10-20 14:12:42

	package net.explorercat.compactcat.parser.antlr;	


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * A grammar for the CompactCat DIC file format. Notice the goal of this grammar
 * is to parse and build an AST for the dictionary definition of the catalog.
 * The actual data will be retreived by the parser implemented by the CompactCatData
 * grammar.
 *
 * (Note this file defines the parser and the lexer).
 *  
 * Developed as a part of the ExplorerCat system.
 * Depends on ANTLR 3.2
 * 
 * @author Jacob Almagro Garcia - jg10@sanger.ac.uk
 * @date January 2011
 */
public class CompactCatDictionaryParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROPERTIES", "RELEASE_DATE", "NAME", "ENTITY", "ATTRIBUTE", "SINGLE_VALUE", "DATE", "YEAR", "MONTH", "DAY", "ARRAY_VALUES", "BASIC_TYPE", "ARRAY_TYPE", "CATALOG", "VERSION", "STRING", "DATE_TYPE", "ID", "DESCRIPTION", "DICTIONARY", "ATTRIBUTES", "VALUES", "INTEGER", "BOOLEAN", "REAL", "NULL", "MINIMUM", "MAXIMUM", "TYPE", "INTEGER_TYPE", "STRING_TYPE", "TEXT_TYPE", "BOOLEAN_TYPE", "REAL_TYPE", "DATE_YEAR_MONTH_DAY", "REFERENCES", "C", "A", "T", "L", "O", "G", "N", "M", "E", "D", "I", "R", "Y", "B", "U", "S", "V", "F", "P", "X", "NUMBER", "EXPONENT", "LINE_COMMENT", "BLANK", "H", "J", "K", "Q", "W", "Z", "'{'", "','", "'}'", "';'", "':'", "'['", "']'", "'<'", "'>'", "'('", "')'"
    };
    public static final int EOF=-1;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int PROPERTIES=4;
    public static final int RELEASE_DATE=5;
    public static final int NAME=6;
    public static final int ENTITY=7;
    public static final int ATTRIBUTE=8;
    public static final int SINGLE_VALUE=9;
    public static final int DATE=10;
    public static final int YEAR=11;
    public static final int MONTH=12;
    public static final int DAY=13;
    public static final int ARRAY_VALUES=14;
    public static final int BASIC_TYPE=15;
    public static final int ARRAY_TYPE=16;
    public static final int CATALOG=17;
    public static final int VERSION=18;
    public static final int STRING=19;
    public static final int DATE_TYPE=20;
    public static final int ID=21;
    public static final int DESCRIPTION=22;
    public static final int DICTIONARY=23;
    public static final int ATTRIBUTES=24;
    public static final int VALUES=25;
    public static final int INTEGER=26;
    public static final int BOOLEAN=27;
    public static final int REAL=28;
    public static final int NULL=29;
    public static final int MINIMUM=30;
    public static final int MAXIMUM=31;
    public static final int TYPE=32;
    public static final int INTEGER_TYPE=33;
    public static final int STRING_TYPE=34;
    public static final int TEXT_TYPE=35;
    public static final int BOOLEAN_TYPE=36;
    public static final int REAL_TYPE=37;
    public static final int DATE_YEAR_MONTH_DAY=38;
    public static final int REFERENCES=39;
    public static final int C=40;
    public static final int A=41;
    public static final int T=42;
    public static final int L=43;
    public static final int O=44;
    public static final int G=45;
    public static final int N=46;
    public static final int M=47;
    public static final int E=48;
    public static final int D=49;
    public static final int I=50;
    public static final int R=51;
    public static final int Y=52;
    public static final int B=53;
    public static final int U=54;
    public static final int S=55;
    public static final int V=56;
    public static final int F=57;
    public static final int P=58;
    public static final int X=59;
    public static final int NUMBER=60;
    public static final int EXPONENT=61;
    public static final int LINE_COMMENT=62;
    public static final int BLANK=63;
    public static final int H=64;
    public static final int J=65;
    public static final int K=66;
    public static final int Q=67;
    public static final int W=68;
    public static final int Z=69;

    // delegates
    // delegators


        public CompactCatDictionaryParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CompactCatDictionaryParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CompactCatDictionaryParser.tokenNames; }
    public String getGrammarFileName() { return "/home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g"; }


    public static class catalog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "catalog"
    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:61:1: catalog : CATALOG '{' cp= catalogProperty ( ',' rcp+= catalogProperty )* '}' ( ';' )? -> ^( CATALOG ^( PROPERTIES $cp ( $rcp)* ) ) ;
    public final CompactCatDictionaryParser.catalog_return catalog() throws RecognitionException {
        CompactCatDictionaryParser.catalog_return retval = new CompactCatDictionaryParser.catalog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token CATALOG1=null;
        Token char_literal2=null;
        Token char_literal3=null;
        Token char_literal4=null;
        Token char_literal5=null;
        List list_rcp=null;
        CompactCatDictionaryParser.catalogProperty_return cp = null;

        RuleReturnScope rcp = null;
        Object CATALOG1_tree=null;
        Object char_literal2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal4_tree=null;
        Object char_literal5_tree=null;
        RewriteRuleTokenStream stream_CATALOG=new RewriteRuleTokenStream(adaptor,"token CATALOG");
        RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
        RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
        RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
        RewriteRuleTokenStream stream_73=new RewriteRuleTokenStream(adaptor,"token 73");
        RewriteRuleSubtreeStream stream_catalogProperty=new RewriteRuleSubtreeStream(adaptor,"rule catalogProperty");
        try {
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:62:3: ( CATALOG '{' cp= catalogProperty ( ',' rcp+= catalogProperty )* '}' ( ';' )? -> ^( CATALOG ^( PROPERTIES $cp ( $rcp)* ) ) )
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:62:6: CATALOG '{' cp= catalogProperty ( ',' rcp+= catalogProperty )* '}' ( ';' )?
            {
            CATALOG1=(Token)match(input,CATALOG,FOLLOW_CATALOG_in_catalog131);  
            stream_CATALOG.add(CATALOG1);

            char_literal2=(Token)match(input,70,FOLLOW_70_in_catalog133);  
            stream_70.add(char_literal2);

            pushFollow(FOLLOW_catalogProperty_in_catalog137);
            cp=catalogProperty();

            state._fsp--;

            stream_catalogProperty.add(cp.getTree());
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:62:37: ( ',' rcp+= catalogProperty )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==71) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:62:38: ',' rcp+= catalogProperty
            	    {
            	    char_literal3=(Token)match(input,71,FOLLOW_71_in_catalog140);  
            	    stream_71.add(char_literal3);

            	    pushFollow(FOLLOW_catalogProperty_in_catalog144);
            	    rcp=catalogProperty();

            	    state._fsp--;

            	    stream_catalogProperty.add(rcp.getTree());
            	    if (list_rcp==null) list_rcp=new ArrayList();
            	    list_rcp.add(rcp.getTree());


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            char_literal4=(Token)match(input,72,FOLLOW_72_in_catalog148);  
            stream_72.add(char_literal4);

            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:62:69: ( ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==73) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:62:69: ';'
                    {
                    char_literal5=(Token)match(input,73,FOLLOW_73_in_catalog150);  
                    stream_73.add(char_literal5);


                    }
                    break;

            }



            // AST REWRITE
            // elements: rcp, CATALOG, cp
            // token labels: 
            // rule labels: retval, cp
            // token list labels: 
            // rule list labels: rcp
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_cp=new RewriteRuleSubtreeStream(adaptor,"rule cp",cp!=null?cp.tree:null);
            RewriteRuleSubtreeStream stream_rcp=new RewriteRuleSubtreeStream(adaptor,"token rcp",list_rcp);
            root_0 = (Object)adaptor.nil();
            // 63:4: -> ^( CATALOG ^( PROPERTIES $cp ( $rcp)* ) )
            {
                // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:63:7: ^( CATALOG ^( PROPERTIES $cp ( $rcp)* ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_CATALOG.nextNode(), root_1);

                // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:63:17: ^( PROPERTIES $cp ( $rcp)* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROPERTIES, "PROPERTIES"), root_2);

                adaptor.addChild(root_2, stream_cp.nextTree());
                // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:63:34: ( $rcp)*
                while ( stream_rcp.hasNext() ) {
                    adaptor.addChild(root_2, stream_rcp.nextTree());

                }
                stream_rcp.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "catalog"

    public static class catalogProperty_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "catalogProperty"
    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:66:1: catalogProperty : ( name | version | releaseDate | description | dictionary );
    public final CompactCatDictionaryParser.catalogProperty_return catalogProperty() throws RecognitionException {
        CompactCatDictionaryParser.catalogProperty_return retval = new CompactCatDictionaryParser.catalogProperty_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CompactCatDictionaryParser.name_return name6 = null;

        CompactCatDictionaryParser.version_return version7 = null;

        CompactCatDictionaryParser.releaseDate_return releaseDate8 = null;

        CompactCatDictionaryParser.description_return description9 = null;

        CompactCatDictionaryParser.dictionary_return dictionary10 = null;



        try {
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:67:2: ( name | version | releaseDate | description | dictionary )
            int alt3=5;
            switch ( input.LA(1) ) {
            case NAME:
                {
                alt3=1;
                }
                break;
            case VERSION:
                {
                alt3=2;
                }
                break;
            case DATE_TYPE:
                {
                alt3=3;
                }
                break;
            case DESCRIPTION:
                {
                alt3=4;
                }
                break;
            case DICTIONARY:
                {
                alt3=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:67:4: name
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_name_in_catalogProperty184);
                    name6=name();

                    state._fsp--;

                    adaptor.addChild(root_0, name6.getTree());

                    }
                    break;
                case 2 :
                    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:68:4: version
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_version_in_catalogProperty189);
                    version7=version();

                    state._fsp--;

                    adaptor.addChild(root_0, version7.getTree());

                    }
                    break;
                case 3 :
                    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:69:4: releaseDate
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_releaseDate_in_catalogProperty194);
                    releaseDate8=releaseDate();

                    state._fsp--;

                    adaptor.addChild(root_0, releaseDate8.getTree());

                    }
                    break;
                case 4 :
                    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:70:4: description
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_description_in_catalogProperty199);
                    description9=description();

                    state._fsp--;

                    adaptor.addChild(root_0, description9.getTree());

                    }
                    break;
                case 5 :
                    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:71:4: dictionary
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_dictionary_in_catalogProperty204);
                    dictionary10=dictionary();

                    state._fsp--;

                    adaptor.addChild(root_0, dictionary10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "catalogProperty"

    public static class version_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "version"
    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:76:1: version : VERSION ':' s= STRING -> ^( VERSION $s) ;
    public final CompactCatDictionaryParser.version_return version() throws RecognitionException {
        CompactCatDictionaryParser.version_return retval = new CompactCatDictionaryParser.version_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token s=null;
        Token VERSION11=null;
        Token char_literal12=null;

        Object s_tree=null;
        Object VERSION11_tree=null;
        Object char_literal12_tree=null;
        RewriteRuleTokenStream stream_VERSION=new RewriteRuleTokenStream(adaptor,"token VERSION");
        RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

        try {
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:77:2: ( VERSION ':' s= STRING -> ^( VERSION $s) )
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:77:4: VERSION ':' s= STRING
            {
            VERSION11=(Token)match(input,VERSION,FOLLOW_VERSION_in_version225);  
            stream_VERSION.add(VERSION11);

            char_literal12=(Token)match(input,74,FOLLOW_74_in_version227);  
            stream_74.add(char_literal12);

            s=(Token)match(input,STRING,FOLLOW_STRING_in_version231);  
            stream_STRING.add(s);



            // AST REWRITE
            // elements: s, VERSION
            // token labels: s
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_s=new RewriteRuleTokenStream(adaptor,"token s",s);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 78:3: -> ^( VERSION $s)
            {
                // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:78:6: ^( VERSION $s)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_VERSION.nextNode(), root_1);

                adaptor.addChild(root_1, stream_s.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "version"

    public static class releaseDate_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "releaseDate"
    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:81:1: releaseDate : DATE_TYPE ':' d= date -> ^( RELEASE_DATE $d) ;
    public final CompactCatDictionaryParser.releaseDate_return releaseDate() throws RecognitionException {
        CompactCatDictionaryParser.releaseDate_return retval = new CompactCatDictionaryParser.releaseDate_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DATE_TYPE13=null;
        Token char_literal14=null;
        CompactCatDictionaryParser.date_return d = null;


        Object DATE_TYPE13_tree=null;
        Object char_literal14_tree=null;
        RewriteRuleTokenStream stream_DATE_TYPE=new RewriteRuleTokenStream(adaptor,"token DATE_TYPE");
        RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
        RewriteRuleSubtreeStream stream_date=new RewriteRuleSubtreeStream(adaptor,"rule date");
        try {
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:82:2: ( DATE_TYPE ':' d= date -> ^( RELEASE_DATE $d) )
            // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:82:4: DATE_TYPE ':' d= date
            {
            DATE_TYPE13=(Token)match(input,DATE_TYPE,FOLLOW_DATE_TYPE_in_releaseDate254);  
            stream_DATE_TYPE.add(DATE_TYPE13);

            char_literal14=(Token)match(input,74,FOLLOW_74_in_releaseDate256);  
            stream_74.add(char_literal14);

            pushFollow(FOLLOW_date_in_releaseDate260);
            d=date();

            state._fsp--;

            stream_date.add(d.getTree());


            // AST REWRITE
            // elements: d
            // token labels: 
            // rule labels: retval, d
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_d=new RewriteRuleSubtreeStream(adaptor,"rule d",d!=null?d.tree:null);

            root_0 = (Object)adaptor.nil();
            // 83:3: -> ^( RELEASE_DATE $d)
            {
                // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:83:6: ^( RELEASE_DATE $d)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(RELEASE_DATE, "RELEASE_DATE"), root_1);

                adaptor.addChild(root_1, stream_d.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "releaseDate"

    public static class name_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "name"
    // /home/chinaski/programming/agile_workspace/ExplorerCat/src/main/antlr3/net/explorercat/compactcat/parser/CompactCatDictionary.g:86:1: name : NAME ':' (i= ID | rn= reservedName | s= STRING ) -> ^( NAME ( $i)? ( $rn)? ( $s)? ) ;
    public final CompactCatDictionaryParser.name_return name() throws RecognitionException {
        CompactCatDictionaryParser.name_return retval = new CompactCatDictionaryParser.name_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token i=null;
        Token s=null;
        Token NAME15=null;
        Token char_literal16=null;
        CompactCatDictionaryParser.reservedName_return rn = null;

